fix for the "<<" in the wrong position in the campaign page before entering

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -596,7 +596,7 @@ div#scene_properties form > div {
     margin: 0 !important;
     left: -2px;
     z-index: 20;
-    width: 340px;
+    /* width: 340px; moved to init_ui */ 
 }
 
 /*.sidebar__controls.player {
